...
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ทันระบาด</string>
    <string name="app_fullname">ทันระบาดสำรวจ</string>
    <string name="title_activity_survey">สำรวจ</string>
    <string name="title_activity_edit_survey">แก้ไขสำรวจ</string>
    <string name="save">บันทึก</string>
    <string name="save_place_failed">บันทึกสถานที่ไม่สำเร็จ</string>
    <string name="save_building_failed">บันทึกอาคารไม่สำเร็จ</string>
    <string name="save_survey_failed">บันทึกการสำรวจไม่สำเร็จ</string>
    <string name="user_not_found">ไม่พบข้อมูลผู้ใช้งาน</string>
    <string name="container_not_found">ไม่พบรายการภาชนะ</string>
    <string name="please_enter_resident">โปรดระบุจำนวนผู้อาศัย</string>
...
    <string name="found">พบ</string>

    <string name="survey_container_description">ภาชนะที่สำรวจ</string>
    <string name="survey_container_bg_description">ภาพพื้นหลังการสำรวจภาชนะ</string>
    <string name="title_card_place_in_database">@string/find_place_by_database</string>
    <string name="title_card_place_recent_survey">@string/find_place_by_recent_survey</string>
    <string name="title_card_building_list">รายชื่ออาคาร</string>

    <!--building category-->
    <string name="building_icon">ไอคอนอาคาร</string>
    <string name="building_not_found">ไม่พบข้อมูลอาคาร</string>
    <string name="building_list_not_found">ไม่พบอาคาร</string>
    <string name="add_building">เพิ่มอาคาร</string>
    <string name="building_name">ชื่ออาคาร/เลขที่บ้าน</string>
    <string name="place_icon">ไอคอนหน้าสถานที่สำรวจ</string>
    <string name="place_bg">พื้นหลังหน้าสถานที่สำรวจ</string>
    <string name="place_not_found">ไม่พบข้อมูลสถานที่</string>
    <string name="place_no_location">%1$s ไม่มีข้อมูลพิกัด ต้องทำการบันทึกพิกัดก่อนทำการสำรวจ</string>
    <string name="cant_save_same_building_name">ไม่สามารถบันทึกได้ เนื่องจากชื่ออาคารนี้มีอยู่แล้ว</string>
    <string name="number_building_list">จำนวนรายการของรายชื่ออาคารหน้าระบุอาคารสำรวจ</string>
    <string name="survey_building_history">ประวัติการสำรวจ</string>
    <string name="survey_building_history_not_found">ไม่พบประวัติการสำรวจ</string>
    <string name="survey_more_building_button_text">กดเพื่อสำรวจอาคารเพิ่ม</string>
    <string name="finish">สิ้นสุด</string>

    <!--location-->
    <string name="save_location">บันทึกพิกัด</string>
    <string name="add_location">เพิ่มพิกัด</string>
    <string name="edit_location">แก้ไขพิกัด</string>
    <string name="define_building_location">ระบุพิกัดอาคาร</string>
    <string name="define_place_location">ระบุพิกัดสถานที่</string>
    <string name="remove_location">ลบพิกัด</string>
    <string name="please_define_location">กรุณาระบุพิกัด</string>
    <string name="please_define_building_location">กรุณาระบุพิกัดของอาคาร</string>
    <string name="confirm_add_building_location">ยืนยันบันทึกพิกัดอาคารหรือไม่</string>

...
    <string name="number_place_list_in_database">จำนวนรายการของรายชื่อสถานที่ที่แถบคลังข้อมูลตามประเภทที่เลือก</string>
    <string name="survey">สำรวจ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="start_survey">เริ่มสำรวจ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="torch">ไฟฉาย</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="define_building_survey">ระบุอาคารสำรวจ</string>
    <string name="define_place_survey">ระบุสถานที่สำรวจ</string>
    <string name="abort_survey">ยกเลิกการสำรวจ</string>

    <string name="got_it">รับทราบ</string>
    <string name="enable_gps">เปิดการตั้งค่า GPS</string>
    <string name="gps_dialog_tilte">GPS ยังไม่ได้เปิดการใช้งาน</string>
    <string name="gps_dialog_message">คุณต้องการเปิดการตั้งค่าการใช้งาน GPS หรือไม่</string>
    <string name="survey_duration">เวลาที่ใช้สำรวจ %1$s</string>
...
    <string name="detail_history_building_list">รายละเอียดการสำรวจ</string>
    <string name="add_place">เพิ่มสถานที่</string>
    <string name="places_not_found">ไม่พบสถานที่</string>
    <string name="place_type">ประเภทสถานที่</string>
    <string name="format_place_count">%1$d รายการ</string>
    <string name="format_building_count">%1$d อาคาร</string>
    <string name="place_name">ชื่อสถานที่</string>
    <string name="address">ที่อยู่</string>
    <string name="place_subtype_label">ประเภทสถานที่ย่อย</string>
    <string name="please_define_place_name">กรุณาระบุชื่อสถานที่</string>
    <string name="please_define_place_address">กรุณาระบุที่อยู่ของสถานที่</string>
    <string name="please_define_place_type">กรุณาระบุประเภทสถานที่</string>
    <string name="please_define_place_sub_type">กรุณาระบุประเภทย่อยสถานที่</string>
    <string name="cant_save_same_place_name">ไม่สามารถบันทึกได้ เนื่องจากชื่อสถานที่นี้มีอยู่แล้ว</string>

    <!--hint -->
    <string name="touch_to_start_survey">แตะที่ลูกน้ำเพื่อเริ่มสำรวจ</string>
    <string name="touch_to_type_house_no">แตะเพื่อพิมพ์บ้านเลขที่</string>
    <string name="touch_to_type_building_name">แตะเพื่อพิมพ์ชื่ออาคาร</string>

    <string name="notify_only_survey_on_current_device">เฉพาะข้อมูลที่สำรวจด้วยเครื่องนี้</string>
    <string name="building_already_survey">สำรวจแล้ว</string>
    <string name="press_back_again_to_exit">กรุณากดอีกครั้งเพื่อออก</string>
    <string name="location">พิกัด</string>
    <string name="distance_between_place_and_building">เนื่องจากพิกัดอาคารห่างจากพิกัดสถานที่ %1$s กม.</string>
    <string name="edit_place">แก้ไขสถานที่</string>
    <string name="mark_location">บันทึกพิกัด</string>
    <string name="search_building_by_name_hint">พิมพ์ชื่ออาคารเพื่อค้นหา</string>
    <string name="search_place_by_name_hint">พิมพ์ชื่อสถานที่เพื่อค้นหา</string>
    <string name="search_place">ค้นหาสถานที่</string>
...
