...


        <TextView
                android:id="@+id/building_name_label"
                style="@style/TextViewTanrabad.Label"
                android:textIsSelectable="false"
                tools:text="บ้านเลขที่"/>

        <EditText
                android:id="@+id/building_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/touch_to_type_house_no"
...
                        android:id="@+id/add_location_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black_transparent_50">

                    <Button
                            android:id="@+id/add_marker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/define_building_location"/>
                </FrameLayout>

...
