<?xml version="1.0" encoding="utf-8"?>
<com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" tools:showIn="@layout/activity_history_building_list">

    <TextView
        android:id="@+id/card_title"
        style="@style/TanrabadTextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_history_building_list"/>

    <TextView
        style="@style/TanrabadTextAppearance.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_title"
        android:text="@string/notify_only_survey_on_current_device"/>

    <TextView
        android:id="@+id/place_subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:textIsSelectable="false"
        tools:text="สำรวจ 100  พบ 20"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/building_icon"
        android:layout_toLeftOf="@id/place_subhead"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/space_between_content"
        android:contentDescription="@null"
        android:src="@mipmap/ic_building_home_black"/>


</com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>
