...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textIsSelectable="false"/>

        <EditText
                android:id="@+id/address_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/touch_to_define_address"
                android:inputType="text"/>

        <LinearLayout
...
                android:id="@+id/add_location_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent_50">

                <Button
                    android:id="@+id/add_marker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/define_building_location" />
            </FrameLayout>
        </FrameLayout>
...
